toggle onClick fixed

--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
     <div class="divBody">
       <header>
         <nav class="top-right open">
-          <a class="disc l1" style="color: #fcf3eb" href="#contact">
+          <a class="disc l1 other" style="color: #fcf3eb" href="#contact">
             <div>Contact</div>
           </a>
-          <a class="disc l2" style="color: #fcf3eb" href="#experience">
+          <a class="disc l2 other" style="color: #fcf3eb" href="#experience">
             <div>Work</div>
           </a>
-          <a class="disc l3" style="color: #fcf3eb" href="#skills">
+          <a class="disc l3 other" style="color: #fcf3eb" href="#skills">
             <div>Skills</div>
           </a>
-          <a class="disc l4" style="color: #fcf3eb" href="#who-im">
+          <a class="disc l4 other" style="color: #fcf3eb" href="#who-im">
             <div>About me</div>
           </a>
           <a class="disc l5 toggle" style="color: #fcf3eb"> Menu </a>
