Changed ortography errors

--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
                 </div>
                 <p class="card-text text-p" style="text-align: justify">
                   Página desarrollada para el instituto de Invectigación del
-                  estado de Veracruz, en la cual se obetnian registros de
+                  estado de Veracruz, en la cual se obtenían registros de
                   propuestas a problematicas existentes en la región.
                 </p>
                 <div class="divButton">
