updated ortography errors

--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
                   Proveicydet
                 </div>
                 <p class="card-text text-p" style="text-align: justify">
-                  Página desarrollada para el instituto de Invectigación del
+                  Página desarrollada para el instituto de Investigación del
                   estado de Veracruz, en la cual se obtenían registros de
                   propuestas a problematicas existentes en la región.
                 </p>
